# ableton-projects

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AutoGainAnalyzer.cpp  AutoGainAnalyzer.h  Clipper.cpp  LUFSMeter.cpp  LevelMeter.cpp
Source/UI/: OscilloscopeComponent.cpp  OscilloscopeComponent.h
max-for-live/: README.md
plugins/ClipToZero/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  install.sh
plugins/ClipToZero/Source/: InstanceRegistry.cpp  InstanceRegistry.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
plugins/ClipToZero/Source/DSP/: AutoGainAnalyzer.h  Clipper.cpp  Clipper.h  GRHistory.cpp  GRHistory.h  LUFSMeter.h  LevelMeter.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TruePeakMeter.cpp  TruePeakMeter.h
plugins/ClipToZero/Source/UI/: GRMeterComponent.cpp  GRMeterComponent.h  GRMeterVertical.cpp  GRMeterVertical.h  HorizontalMeter.cpp  HorizontalMeter.h  Knob.cpp  Knob.h  LookAndFeel_F.cpp  LookAndFeel_F.h  LufsBox.cpp  LufsBox.h  MeterComponent.cpp  MeterComponent.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  StageLane.cpp  StageLane.h  Theme.h  TransferCurveComponent.cpp  TransferCurveComponent.h
plugins/ClipToZero/notes/: CLAUDE_DESIGN_PROMPT.md  LAUNCH_CHECKLIST.md  MONETIZATION.md
plugins/ClipToZero/website/: index.html  styles.css
